Thu Jul  4 20:39:20 2013  Tanaka Akira  <akr@fsij.org>

	* tool/make-snapshot: Exit with EXIT_FAILURE when it fails.

Thu Jul  4 20:20:23 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (maxpow_in_bdigit_dbl): Use tables if available.
	  (maxpow_in_bdigit): Ditto.
	  (U16): New macro.
	  (U32): Ditto.
	  (U64): Ditto.
	  (U128): Ditto.
	  (maxpow16_exp): New table.
	  (maxpow16_num): New table.
	  (maxpow32_exp): New table.
	  (maxpow32_num): New table.
	  (maxpow64_exp): New table.
	  (maxpow64_num): New table.
	  (maxpow128_exp): New table.
	  (maxpow128_num): New table.

Thu Jul  4 18:25:25 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cstr_to_inum): Avoid temporary buffer allocation except
	  very big base non-power-of-2 numbers.

Thu Jul  4 15:51:56 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_succ): use ONIGENC_MBCLEN_CHARFOUND_P correctly.

	* string.c (rb_str_dump): ditto.

Thu Jul  4 10:04:11 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c (): Merge Onigmo 5.13.5 23b523076d6f1161.

	  * [bug]  (thanks Akinori MUSHA and Ippei Obayashi)
	           Fix a renumbering bug in condition regexp with a named
	           capture. [Bug #8583]
	  * [spec] (thanks Akinori MUSHA)
	    Allow ENCLOSE_OPTION in look-behind.

Thu Jul  4 00:36:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (SIGNED_INTEGER_MAX): suppress warning C4146 on VC6.
	  seems a logical ORed expression becomes unsigned.

Thu Jul  4 00:13:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (rb_w32_atomic_cas): call InterlockedCompareExchange
	  directly.

	* ruby_atomic.h (ATOMIC_CAS): fix missing function call.

Wed Jul  3 23:47:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (ATOMIC_CAS): suppress C4022 and C4047 warnings in
	  VC6.  only InterlockedCompareExchange is declared using PVOID.

Wed Jul  3 22:29:20 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (ruby_digit36_to_number_table): Declared.
